--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
-    "expo": "^32.0.6",
-    "react": "16.3.1",
+    "braces": "^3.0.2",
+    "expo": "^33.0.7",
+    "lodash": "^4.17.14",
+    "react": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
-    "react-native-shake": "^3.2.2"
+    "react-native-shake": "^3.3.1",
+    "ws": "^7.1.0"
   }
 }
