--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "braces": "^3.0.2",
     "expo": "^33.0.7",
     "lodash": "^4.17.14",
+    "mem": "^5.1.1",
     "react": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-shake": "^3.3.1",
