--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "braces": "^3.0.2",
     "expo": "^33.0.7",
+    "expo-cli": "^2.21.2",
     "lodash": "^4.17.14",
     "mem": "^5.1.1",
     "react": "^16.8.6",
